samples/_failures_safe/1761086083_03ec4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a34523e.c: In function ‘main’:
./samples/SAFE/__tmp_2a34523e.c:149:5: error: expected expression at end of input
  149 |     if (
      |     ^~
./samples/SAFE/__tmp_2a34523e.c:149:5: error: expected declaration or statement at end of input
